--- a/src/index.styl
+++ b/src/index.styl
@@ -1,7 +1,13 @@
-h1
-  color: red;
-  .apple
-    color blue
-    .baanan
-      color #3a33d1
+.taggd-wrapper_container
+  position relative
+  width 100%
+  height 100%
+  tagged-wrapper
+  position: relative;
+  img
+    width: 100%
+    height 400px
+    padding 40px
+    display block
+
 
