--- a/src/index.styl
+++ b/src/index.styl
@@ -1,13 +1,59 @@
-.taggd-wrapper_container
+* {
+  box-sizing border-box
+}
+
+.taggd-wrapper_container {
   position relative
   width 100%
   height 100%
-  tagged-wrapper
-  position: relative;
-  img
+  img {
     width: 100%
     height 400px
-    padding 40px
     display block
+  }
+  .taggd-main {
+    position relative;
+    .tagged-wrapper {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+    }
+
+  }
+  .tagged-mask {
+    position: absolute;
+    top: 0;
+    background-color: rgba(0, 0, 0, .6);
+    width: 100%;
+    height: 100%;
+  }
+  .info {
+    .tagged-item {
+      background: #fff !important;
+      padding: 4px;
+      border: 6px solid #000;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .taggd-item-hover {
+      color: #fff;
+      text-indent: 6px;
+      -webkit-clip-path: polygon(25% 0%, 100% 0, 100% 100%, 25% 100%, 0 50%);
+      clip-path: polygon(25% 0%, 100% 0, 100% 100%, 25% 100%, 0 50%);
+      background: #000;
+      opacity: .7;
+      display: block;
+      padding: 4px 10px;
+      font-size: 12px;
+      text-align: center;
+      border-radius: 3px;
+      max-width: 92px;
+      word-break: break-all;
+    }
+  }
+}
+
 
 
